# arduino-enocean-heater-control

./: .gitignore  Cargo.toml
.cargo/: config.toml
arduino_enocean_heater_control/: Cargo.toml  build.rs
arduino_enocean_heater_control/data/: alphabet.xcf
arduino_enocean_heater_control/src/: bit_field.rs  click_spi.rs  display.rs  main.rs  memory.x  uart.rs  usart.rs
atsam3x8e/: README.md
buildingblocks/: Cargo.toml
buildingblocks/src/: bit_field.rs  crc8.rs  lib.rs  max_array.rs  max_array_ext.rs  ring_buffer.rs
on_board/: Cargo.toml  build.ps1  oocd-debug-jlink.cfg  oocd-prog-jlink.cfg  oocd-rst-jlink.cfg
on_board/arduino_enocean_heater_control/: Cargo.toml
on_board/arduino_enocean_heater_control/data/: alphabet.xcf
on_board/arduino_enocean_heater_control/src/: click_spi.rs  crc8.rs  esp3.rs  esp3_serial.rs  main.rs  ring_buffer.rs  uart.rs  usart.rs
on_board/arduino_enocean_heater_control/src/atsam3x8e_ext/: pin.rs
on_board/arduino_enocean_heater_control/src/display/: mod.rs
on_board/arduino_enocean_heater_control/src/esp3/: mod.rs  response_data.rs  serial.rs
on_board/atsam3x8e/: Cargo.toml
on_board/atsam3x8e_ext/: Cargo.toml
on_board/dcf77_faker/: Cargo.toml
on_host/: Cargo.toml  buildeep.ps1
on_host/collect_eepxml/: Cargo.toml
on_host/collect_eepxml/src/: main.rs  xml_magic.rs
on_host/deesp3/: Cargo.toml
on_host/eepxml2rust/: Cargo.toml  askama.toml
on_host/png2bitfield/: Cargo.toml
on_host/png2pixels/: Cargo.toml
on_host/rigoletto/: Cargo.toml
on_host/winsersetup/: Cargo.toml
on_host/winsersetup/src/: main.rs
(+36 files in other folders)
