[package]
name = "collect_eepxml"
version = "0.1.0"
edition = "2021"

[dependencies]
buildingblocks = { path = "../../buildingblocks" }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sxd-document = { version = "0.3" }
sxd-xpath = { version = "0.4" }
tokio = { version = "1.21", features = ["full"] }
